hammer: osd/ReplicatedPG: fix be_deep_scrub crash on EIO

https://github.com/ceph/ceph/pull/3166 introduce the support of
fadvise to the backstore, but don't update the Filestore::read()
API of be_deep_scrub correspondingly. So the FileStore::read()
mistranslates the last parameter passed in as fadvise flag instead
of allow_eio, which is seriously wrong.

The above problem gets fixed by fabd6357e42e526d2704d7cb80375c12d731df8d
but there is a conflict chain which can't be easily resolved by a
simple cherry-pick command.

Fixes: http://tracker.ceph.com/issues/16034
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>
(cherry picked from commit fabd6357e42e526d2704d7cb80375c12d731df8d)

Conflicts:
  use explicit ghobject_t(hobject_t) ctor